<resources>
    <string name="app_name">Easy CV Builder</string>
    <string name="splash_easy_cv_builder_app">Easy Cv Builder App</string>
    <string name="splash_loading">loading...</string>
    <!--halaman personaldetail-->
    <string name="personaldetail_labelpersonal">Personal Detail</string>
    <string name="personaldetail_name">Name</string>
    <string name="personaldetail_address">Address (Optional)</string>
    <string name="personaldetail_email">E-mail</string>
    <string name="personaldetail_phone">Phone</string>
    <string name="personaldetail_dateofbirt">Date of Birt (Optional)</string>
    <string name="personaldetail_photo">Photo (Optional)</string>
    <!--education-->
    <string name="education_toolbar">Education</string>
    <string name="educartion_addbtn">add</string>
    <string name="education_labeledu">Education 1</string>
    <string name="education_degree">Course / Degree</string>
    <string name="education_school">School / University</string>
    <string name="education_score">Grade / Score</string>
    <string name="education_years">Year</string>
    <!--experince-->
    <string name="experience_label">Experience</string>
    <string name="experience_help_label">Experience</string>
    <string name="experience_details">Details</string>
    <string name="experience_endate">End Date</string>
    <string name="experience_startdate">Start Date</string>
    <string name="experience_grade">Grade / Score</string>
    <string name="experience_jobtitle">Job Title</string>
    <string name="experience_company">Company Name</string>
    <!--skill-->
    <string name="skill_label_toolbar">Skill</string>
    <string name="skill_info">Skill</string>
    <string name="skill_score">Score</string>
    <!--Hobby-->
    <string name="hobby_label_hoby">Hobby</string>
    <!--Summary-->
    <string name="summary_labelsummary">Summary</string>
    <string name="summary_workas">Work as</string>
    <!--social media-->
    <string name="socialmedia_label">Social media</string>
    <string name="socialmedia_ig">Instagram</string>
    <string name="socialmedia_fb">Facebook</string>
    <string name="socialmedia_twitter">Twitter</string>
    <string name="socialmedia_linkdin">Linkedin</string>
    <string name="socialmedia_web">Personal Website</string>
    <!--language-->
    <string name="language_label">Language</string>
    <string name="language_score">Score</string>
    <string name="languge_btnadd">add</string>
    <!--complatelcv-->
    <string name="complatecv_labelgpdf">Generate PDF</string>
    <string name="complatecv_labelads">Ads</string>
    <string name="complatecv_labeltitle">Resume_11_12_2022_10</string>
    <string name="complatecv_labelcdate">14/12/2022</string>
    <string name="complatecv_labeldelete">Delete</string>
    <string name="complatecv_labelshare">Share</string>
    <string name="template_labeltoolbar">Choose Template</string>
    <!--formating template-->
    <string name="formating_template_toolbar">Formating Template</string>
    <string name="formating_template_print">Print</string>
    <string name="formating_template_download">Download</string>
    <string name="formating_template_setfont">Setting Font</string>
    <string name="formating_template_fontexp">Font Experince</string>
    <string name="formating_template_fontcont">Font Contact</string>
    <string name="formating_template_fontedu">Font Education</string>
    <string name="formating_template_fontskill">Font Skills</string>
    <string name="formating_template_hobby">Hobbies</string>
    <string name="formating_template_setltemp">Settings Label Template</string>
    <string name="formating_template_lbeexp">Work Experience</string>
    <string name="formating_template_contact">Contact</string>
    <string name="formating_template_edu">Education</string>
    <string name="formating_template_skill">Skills</string>
    <string name="formating_template_hobbies">Hobbies</string>
    <string name="formating_template_font">Font</string>
    <string name="formating_template_opt">Optional</string>
    <string name="formating_template_sign">Signature</string>
    <string name="formating_template_bg">Background Color</string>
    <!--template 1-->
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="tempone_name">JUSTIN</string>
    <string name="tempone_subname">NGUYEN</string>
    <string name="tempone_prof">DESIGN AND FRONTEND DEBELOPERS</string>
    <string name="tempone_exp">WORK EXPERIENCE</string>
    <string name="label_cont">CONTACT</string>
    <string name="tempone_numb">+84 - 969877097</string>
    <string name="tempone_email">figmateam@gmail.com</string>
    <string name="tempone_wa">+84 - 969877097</string>
    <string name="tempone_add">California 90999, United States</string>
    <string name="tempone_edu">EDUCATION</string>
    <string name="tempone_skill">SKILLS</string>
    <string name="tempone_hob">HOBBIES</string>
    <string-array name="type_font">
        <item>Font</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>