<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    android:padding="4dp"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/label_edu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Experience"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/trash" />

        <EditText
            android:id="@+id/company"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/corners_editx"
            android:hint="@string/experience_company"
            android:inputType="textPersonName"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/label_edu"
            app:layout_constraintTop_toBottomOf="@+id/label_edu" />

        <EditText
            android:id="@+id/jobtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/corners_editx"
            android:hint="@string/experience_jobtitle"
            android:inputType="textPersonName"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/label_edu"
            app:layout_constraintTop_toBottomOf="@+id/company" />

        <EditText
            android:id="@+id/grade"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/corners_editx"
            android:hint="@string/experience_grade"
            android:inputType="textPersonName"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/label_edu"
            app:layout_constraintTop_toBottomOf="@+id/jobtitle" />

        <EditText
            android:id="@+id/startdate"
            android:layout_width="196dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/corners_editx"
            android:hint="@string/experience_startdate"
            android:inputType="textPersonName"
            android:padding="10dp"
            app:layout_constraintEnd_toStartOf="@+id/enddate"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/grade" />

        <EditText
            android:id="@+id/enddate"
            android:layout_width="196dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/corners_editx"
            android:hint="@string/experience_endate"
            android:inputType="textPersonName"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/startdate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/startdate"
            app:layout_constraintTop_toTopOf="@+id/startdate"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/detail"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:gravity="top"
            android:layout_marginTop="8dp"
            android:background="@drawable/corners_editx"
            android:hint="@string/experience_details"
            android:inputType="textPersonName"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/startdate"
            app:layout_constraintTop_toBottomOf="@+id/startdate" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>