<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormatTemplate">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/blue_4285F4"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/formating_template_toolbar"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <FrameLayout
        android:id="@+id/framelay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/gray_C4C4C4"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/linBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linBottom"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/orange_FC5F06"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/pirnt_b"
            android:backgroundTint="@color/gray_C4C4C4"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:layout_marginStart="4dp"
            android:text="@string/formating_template_print"/>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:background="@color/white"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/dowload_b"
            android:backgroundTint="@color/gray_C4C4C4"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            android:text="@string/formating_template_download"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <!--fab pencil-->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:backgroundTint="@color/orange_FC5F06"
        app:tint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:srcCompat="@drawable/pencil" />

    <!--close panel formating template-->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonToclose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/red_EB3223"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:srcCompat="@drawable/close"
        app:tint="@color/white" />

    <!--panel custom template-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:background="@color/black_88000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/label_setsize_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/formating_template_setfont"
            android:textSize="18sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/white"
            android:padding="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_setsize_font">

            <TextView
                android:id="@+id/label_font1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/formating_template_fontexp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:thumbTint="@color/orange_FC5F06"
                app:layout_constraintBottom_toBottomOf="@+id/label_font1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/label_font1"
                app:layout_constraintTop_toTopOf="@+id/label_font1" />

            <TextView
                android:id="@+id/label_font2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/formating_template_fontcont"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/label_font1"
                app:layout_constraintTop_toBottomOf="@+id/label_font1" />

            <SeekBar
                android:id="@+id/seekBarfont2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="16dp"
                android:thumbTint="@color/orange_FC5F06"
                app:layout_constraintBottom_toBottomOf="@+id/label_font2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/seekBar"
                app:layout_constraintTop_toTopOf="@+id/label_font2" />


            <TextView
                android:id="@+id/label_font3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/formating_template_fontedu"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/label_font1"
                app:layout_constraintTop_toBottomOf="@+id/label_font2" />

            <SeekBar
                android:id="@+id/seekBarfont3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="16dp"
                android:thumbTint="@color/orange_FC5F06"
                app:layout_constraintBottom_toBottomOf="@+id/label_font3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/seekBarfont2"
                app:layout_constraintTop_toTopOf="@+id/label_font3" />

            <TextView
                android:id="@+id/label_font4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/formating_template_fontskill"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/label_font3"
                app:layout_constraintTop_toBottomOf="@+id/label_font3" />

            <SeekBar
                android:id="@+id/seekBarfont4"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="16dp"
                android:thumbTint="@color/orange_FC5F06"
                app:layout_constraintBottom_toBottomOf="@+id/label_font4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/seekBarfont3"
                app:layout_constraintTop_toTopOf="@+id/label_font4" />

            <TextView
                android:id="@+id/label_font5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/formating_template_hobby"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/label_font4"
                app:layout_constraintTop_toBottomOf="@+id/label_font4" />

            <SeekBar
                android:id="@+id/seekBarfont5"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="16dp"
                android:thumbTint="@color/orange_FC5F06"
                app:layout_constraintBottom_toBottomOf="@+id/label_font5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/seekBarfont4"
                app:layout_constraintTop_toTopOf="@+id/label_font5" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--Settings Label Template-->
        <TextView
            android:id="@+id/label_set_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/formating_template_setltemp"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraintLayout" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintsetlabeltemplate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/label_set_temp"
            app:layout_constraintTop_toBottomOf="@+id/label_set_temp">

            <EditText
                android:id="@+id/workexp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/corners_editx"
                android:hint="@string/formating_template_lbeexp"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/contact"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/corners_editx"
                android:hint="@string/formating_template_contact"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/workexp" />

            <EditText
                android:id="@+id/edu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/corners_editx"
                android:hint="@string/formating_template_edu"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contact" />

            <EditText
                android:id="@+id/skill"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/corners_editx"
                android:hint="@string/formating_template_skill"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edu" />

            <EditText
                android:id="@+id/hobbies"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/corners_editx"
                android:hint="@string/formating_template_hobbies"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edu" />

            <Spinner
                android:id="@+id/font"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/corners_editx"
                android:entries="@array/type_font"
                android:hint="@string/formating_template_font"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hobbies" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--Optional-->
        <TextView
            android:id="@+id/label_set_opt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/formating_template_opt"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraintsetlabeltemplate" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintsetopt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/label_set_opt"
            app:layout_constraintTop_toBottomOf="@+id/label_set_opt">

            <TextView
                android:id="@+id/sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:drawableLeft="@drawable/check_ftemp"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/formating_template_sign"
                android:textAlignment="center"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/bg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:drawableLeft="@drawable/bg_temp"
                android:padding="8dp"
                android:text="@string/formating_template_bg"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>